--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -345,53 +345,66 @@
 
     }
 
+
     /* vision */
-    .mision__texto img {
-        width: 600px;
-        margin-top: 4em;
+    .mision{
+        flex-direction: column;
+        align-items: center;
+        margin: 0 auto;
+        padding: 50px;
+    }
+    .mision__texto{
+        width: 100%;
+        margin: auto;
+        
     }
 
     .mision__parrafo {
+        width: 100%;
+        margin: 0;
         padding-top: 2em;
     }
 
     /* texto descontracturado */
     .t-stroke {
+        width: 100%;
         position: absolute;
-        top: 72%;
-        font-size: 7em;
+        top: 32%;
+        left: 5%;
+        font-size: 5em;
         line-height: 90px;
     }
 
     .aside {
-        height: 45vh;
+        height: auto;
     }
 
     .aside__texto {
-        width: 10em;
+        width: 15em;
         height: 10em;
+        margin: 30px;
     }
 
     .aside__texto2 {
-        width: 10em;
+        width: 15em;
         height: 10em;
     }
 
     .aside__texto3 {
-        width: 10em;
+        width: 15em;
         height: 10em;
     }
 
     .aside__titulo {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .aside__titulo2 {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .aside__titulo3 {
-        font-size: 20px;
+        font-size: 30px;
     }
 
     .aside__subtitulo {
@@ -426,7 +439,7 @@
 
     /* Actividades modal */
     .iglesia__modal__card {
-        width: 70%;
+        width: 80%;
     }
 
     .iglesia__modal__titulo {
@@ -435,7 +448,7 @@
 
     .iglesia__modal__parrafo {
         font-size: 12px;
-        line-height: 18px;
+        line-height: 20px;
     }
 
     /* cuarto */
@@ -1649,8 +1662,6 @@
         color: aqua;
     }
 
-
-
     /* ministerio */
     .ministerio {
         height: auto;
@@ -1702,6 +1713,10 @@
         width: 95%;
     }
 
+    .iglesia__modal__contenedor--titulo{
+        height: 100px;
+    }
+
     .iglesia__modal__titulo {
         font-size: 20px;
     }
@@ -1709,10 +1724,8 @@
     .iglesia__modal__parrafo {
         font-size: 10px;
         line-height: 15px;
+        color: black;
     }
-
-
-
 
 
     .ribbon__diagonal {
@@ -1812,19 +1825,10 @@
 
     /* texto descontracturado */
     .t-stroke {
-        width: 280px;
-        position: absolute;
-        top: 87%;
-        left: 53%;
-        margin: -140px 0 0 -140px;
-
-        color: transparent;
-        -moz-text-stroke-width: 2px;
-        -webkit-text-stroke-width: 2px;
-        -moz-text-stroke-color: #000000;
-        -webkit-text-stroke-color: #ffffff;
-
-        font-size: 65px;
+        width: 100%;
+        top: 70%;
+        left: 45%;
+        font-size: 80px;
         line-height: 80px;
     }
 
@@ -1833,50 +1837,6 @@
         font-family: 'Montserrat', sans-serif;
         font-weight: 600;
         line-height: 50px;
-    }
-
-    /* Modal niños */
-    .popup__card {
-        height: 85%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .popup__img {
-        width: 100%;
-        height: 30%;
-        filter: contrast(1.2);
-    }
-
-    .popup__text {
-        width: 100%;
-        height: 70%;
-        padding: 30px;
-        text-align: justify;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .popup__text h2 {
-        font-size: 22px;
-        font-weight: 600;
-
-    }
-
-    .popup__text p {
-        margin-top: 12px;
-        font-size: 12px;
-    }
-
-    .popup__social a {
-        font-size: 25px;
-        padding: 10px;
-        color: black;
-
-    }
-
-    .popup__social a:hover {
-        color: var(--color-tres);
     }
 
     .container__diagonal {
