--- a/style.css
+++ b/style.css
@@ -887,7 +887,7 @@ summary {
 }
 
 .mision__imagen img {
-  width: 450px;
+  width: 400px;
   z-index: 0;
   overflow: hidden;
   margin: 0 auto;
@@ -1332,6 +1332,7 @@ scale: 1;
   height: auto;
   background: white;
   padding: 30px;
+  border-radius: 20px;
   transition: all 800ms;
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
@@ -1346,6 +1347,7 @@ scale: 1;
   top: 0;
   left: 0;
   background: var(--color-uno);
+  border-radius: 20px 20px 0 0;
 }
 
 .iglesia__modal__titulo {
