--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ id {
   display: flex;
   text-transform: uppercase;
   color: black;
+  margin-right: 4em;
 }
 
 .navbar__link {
@@ -300,40 +301,17 @@ id {
   color: var(--color-tres);
 }
 
-.navbar__social {
-
+/* .navbar__social {
   display: flex;
   text-decoration: none;
-  color: #fff;
+  color: black;
   text-align: center;
-  transition: all 300ms ease;
-  padding: 0;
   margin-right: 4em;
-
 }
+.navbar__social i{
+  margin: 7px;
+} */
 
-.navbarSocial--on {
-  display: none;
-}
-
-.navbar__social img {
-  margin: 12px;
-}
-
-.navFace {
-  width: 25px;
-  height: auto;
-}
-
-.navInsta {
-  width: 25px;
-  height: auto;
-}
-
-.navYoutube {
-  width: 25px;
-  height: auto;
-}
 
 
 /*icono hamburguesa*/
@@ -344,50 +322,80 @@ id {
 /*Main (contendido principal*/
 .main {
   width: 100%;
-  height: 600px;
+  height: 700px;
   background: url(img/portadaaa.jpg);
-  background-size: 75em;
+  background-size: cover;
   background-repeat: no-repeat;
-  /* background-position-y: -3em; */
-  /* background-attachment: fixed; */
+  background-position-y: top;
+  background-attachment: fixed;
 
   grid-area: main;
   position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: nowrap;
   filter: contrast(100%);
 
-  animation: movimiento 9s linear alternate infinite;
+
+  /* animation: movimiento 9s linear alternate infinite; */
 }
 
-@keyframes movimiento {
+/* @keyframes movimiento {
   from{
     background-position: bottom left;
   } to{
     background-position: top right;
   }
+} */
+
+
+/* social lateral */
+.main__social--lateral {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 80px;
+  right: 0;
+  text-decoration: none;
+  color: white;
+  background:#2f2840cf;
+  text-align: center;
+  padding: 15px;
+ 
+}
+.main__social--lateral i{
+  cursor: pointer;
+  font-size: 25px;
+  margin: 7px;
 }
 
 .main::before {
   width: 100%;
-  height: 600px;
+  height: 700px;
   content: '';
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(13, 25, 52, 0.559);
   z-index: 0;
 }
 
 .main__text {
-  text-align: center;
+  width: 40%;
+  height: auto;
+  text-align: left;
   color: white;
-  z-index: 1;
+  z-index: 9999999;
   overflow: hidden;
+  background: #2f2840cf;
+
+
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: center;
+
 }
 
 .main__social {
@@ -395,26 +403,33 @@ id {
 }
 
 .main__titulo {
-  font-size: 4em;
-  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5em;
+  font-family: 'Lato', sans-serif;
   font-weight: 600;
-  margin: 10px auto;
-  letter-spacing: 0px;
-  padding: 20px;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
+  /* margin: 10px auto; */
+  /* padding: 20px; */
+  /* text-shadow: 2px 2px 2px rgba(0, 0, 0, .5); */
+  margin: 20px 0 0 60px;
+
+
+
 }
 
 .main__tituloPre {
-  font-size: 25px;
+  font-size: 20px;
   font-family: 'Cardo', serif;
   font-weight: 100;
+  margin: 0 0 -10px 60px;
+
 }
 
 .main__tituloSub {
-  font-size: 15px;
-  margin: 18px;
+  width: 60%;
+  font-size: 12px;
+  /* margin: 18px; */
   font-weight: 400;
   letter-spacing: 2px;
+  margin: 20px 0 0 60px;
 }
 
 .main__tituloFondo {
@@ -429,22 +444,24 @@ id {
   font-family: 'Cardo', serif;
   color: rgba(138, 128, 128, 0.05);
   overflow: hidden;
+
 }
 
 .main__linea {
-  width: 90px;
+  width: 160px;
   height: 2px;
   background-color: var(--color-uno);
-  text-align: center;
-  margin: 15px auto;
+  /* margin: 15px auto; */
+  margin: 20px 0 0 60px;
 }
 
 .main__btn {
+  width: auto;
   z-index: 1;
   background-color: var(--color-uno);
-  border-radius: 8px;
-  padding: 8px;
-  margin: 15px auto;
+  padding: 20px;
+  /* margin: 15px auto; */
+  margin: 20px 0 0 60px;
 
 }
 
@@ -452,7 +469,7 @@ id {
   font-size: 16px;
   font-weight: 600;
   border: none;
-  color: white;
+  color: black;
 }
 
 .main__btn:hover {
@@ -837,7 +854,7 @@ id {
   color: white;
   z-index: 1;
   text-align: left;
-  margin: 5em auto ;
+  margin: 5em auto;
 }
 
 .mision__parrafo:active {
@@ -890,7 +907,7 @@ summary {
   outline: none;
 }
 
-.mision__imagen{
+.mision__imagen {
   display: flex;
   position: relative;
 
@@ -1322,21 +1339,23 @@ summary {
 
   display: none;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
 }
 
 .iglesia__modal--active {
   display: flex;
-  
+
 }
 
 @keyframes myMove {
-  from{
-scale: .5;
-  } to{
-scale: 1;
+  from {
+    scale: .5;
   }
-  
+
+  to {
+    scale: 1;
+  }
+
 }
 
 .iglesia__modal__card {
@@ -1347,12 +1366,12 @@ scale: 1;
   border-radius: 20px;
   transition: all 800ms;
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   animation: myMove .5s ease-in-out;
   transition: all 3s ease-in-out;
 }
 
-.iglesia__modal__contenedor--titulo{
+.iglesia__modal__contenedor--titulo {
   width: 100%;
   height: 100px;
   position: absolute;
@@ -1384,7 +1403,7 @@ scale: 1;
   margin: 20px auto 0;
   padding: 10px;
   background-color: var(--color-uno);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   text-align: center;
   cursor: pointer;
 }
